# japan-real-estate-broker-database

./: .gitignore  CODEX.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cloud-daily-pipeline.yml  notion-sync.yml  publish-database.yml  python-autofix.yml
config/: cloud_pipeline.json
data/: real_estate_brokers.csv  research_queue.csv
database/: notion_import.csv  real_estate_brokers.csv  real_estate_brokers.xlsx  summary.md
docs/: architecture.md  cloud-automation.md  local-scheduler.md  setup.md
reports/: 2026-07-16.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  ci-pytest.txt  cloud-validation.txt  latest.json  pytest.txt  ruff-lint.txt
scripts/: __init__.py  install_daily_cron.sh  install_daily_task.ps1  run_daily.py  scheduler.py
src/real_estate_db/: __init__.py  build_excel.py  cloud_pipeline.py  daily_runner.py  enrichment.py  mlit_source.py  notion_sync.py  scheduler.py  schema.py  validate.py
src/real_estate_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
state/: discovery_state.json
tests/: test_build_excel.py  test_cloud_pipeline.py  test_daily_runner.py  test_enrichment.py  test_mlit_source.py  test_scheduler.py  test_validate.py
tests/fixtures/: mlit_registry_sample.html
